--- a/manifest.json
+++ b/manifest.json
@@ -4,23 +4,12 @@
     "description": "Sort islands on turnip.exchange",
     "manifest_version": 2,
     "permissions": [
-        "activeTab",
-        "declarativeContent"
+        "activeTab"
     ],
-    "background": {
-        "scripts": [
-            "background.js"
-        ],
-        "persistent": false
-    },
-    "page_action": {
+    "browser_action": {
         "default_popup": "popup.html",
-        "default_icons": {
-            "16": "images/turnip16.png",
-            "32": "images/turnip32.png",
-            "48": "images/turnip48.png",
-            "128": "images/turnip128.png"
-        }
+        "default_icon": "images/turnip32.png",
+        "default_title": "Turnip Exchange Sort"
     },
     "icons": {
         "16": "images/turnip16.png",
